smapi 1.6.4
-----------
(released on Mon May 22 14:58:56 CEST 2000)

----- cvs ci ------
Tue Jul 25 22:09:07 NOVST 2000
max (patches from Pavel Gulchouk):
* jam @Via fixes

----- cvs ci ------
Thu Jul 13 19:22:30 NOVST 2000
max (patches from Pavel Gulchouk):
* jam readsubfiled() fixes

----- cvs ci ------
Thu Jun 29 21:39:49 NOVST 2000
max (patches from Pavel Gulchouk):
* time fixes in jam area
* write intl kludges only for netmail areas (jam)

----- cvs ci ------
Tue Jun 27 22:54:18 NOVST 2000
max:
* JAM optimization: removed many strlen()

----- cvs ci ------
Mon May 22 14:58:56 CEST 2000
mtt:
* changed version number to 1.6.4

----- cvs ci ------
Mon May 22 11:40:00 NOVST 2000
max (patch from Alex Bronin):
* fix to use stat() with Watcom & MSVC

----- cvs ci ------
Mon May  8 17:40:14 NOVST 2000
max (patch from Alex Bronin):
* MS Visual C porting

----- cvs ci ------
Fri Apr 14 16:54:02 MSD 2000
max (patch from Serguei Revtov):
* memory leak in write_sqidx()

----- cvs ci ------
Fri Apr  7 15:25:58 MSD 2000
max (patch from Serguei Revtov):
* MsgReadMsg now sets last character of text & ctext to '\0'

----- cvs ci ------
Sat Apr 1 13:40:17 MSD 2000
Fedor:
* fixed logical error (&&, ||) in Jam_Close()

----- cvs ci ------
Fr  31 Mar 2000 17:53:23 CEST
tobi (patches mostly from Alex S. Aganichev)
* Modified the routines in fexist.c to use stat() if available, instead
  of opendir/readdir/closedir. This should speed up things a lot and also 
  produce more reliable results.
* Some small corrections in compiler.h for various compilers.
* Fixed flush_handle2 for DJGPP and for RSXNT (the RSXNT code previously
  did use wrong handle numbers, which could produce very interesting
  results ...)
* Accelerated patmat routine for sequences with multiple wildcards.
* Added shareloaded function for DJGPP.

----- cvs ci ------
Mon Mar 20 08:56:28 MSK 2000
max (patch from Serguei Revtov):
* change legacy SUN makefile to compile

----- cvs ci ------
Thu Mar 9 2000 17:42:30 CET